--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+<title>Firechat</title>
     <script src='https://cdn.firebase.com/v0/firebase.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js'></script>
     <script src="https://www.firebase.com/js/libs/idle.js"></script>
